styles/style.css
:root {
  font-size: 1em;
  box-sizing: border-box;

  --white: #f7f7f7;
  --orange: #f5b553;
  --brown: #854836;
  --black: #000000;
}

*,
*::before,
*::after {
  box-sizing: inherit;
  margin: 0;
  padding: 0;
}

body {
  min-height: 100vh;
  font-family: "Schoolbell", cursive;
  background: var(--white);
  color: var(--orange);
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-wrap: wrap;
}

header {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0 1em;
}

h1 {
  margin-bottom: 0.5em;
  font-size: 3rem;
  text-shadow: 4px 3px 0 var(--brown);
}

.clear {
  margin-bottom: 1em;
  background: transparent;
  padding: 0.5em 3em;
  font-size: 2rem;
  color: inherit;
  cursor: pointer;
  border-color: var(--black);
  font-family: inherit;
  transition: ease-in-out 0.2s;
}

.clear:hover {
  background-color: var(--brown);
}

.pop-up {
  position: absolute;
  top: 2%;
  left: 50%;
  overflow: hidden;
  transform: translateX(-50%);
  grid-template-columns: 45% 10% 45%;
  font-size: 2rem;
  background: var(--brown);
  border: 5px solid var(--brown);
  border-radius: 0.1em;
  text-align: center;
  align-items: center;
  align-content: center;
  min-width: 20%;
  color: var(--orange);
}

span {
  height: 100%;
  padding-top: 0.4em;
}

.input-right {
  grid-column: 3 / 4;
  align-self: center;
  height: 100%;
  padding-top: 0.4em;
}

label {
  background: var(--white);
  padding: 0.5em 0;
  grid-column: 1 / 4;
}

.input-left {
  grid-column: 1 / 2;
}

input {
  padding: 0.5em 0;
  text-align: center;
  background: transparent;
  border: none;
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  outline: none;
  text-align: center;
}

input::placeholder {
  color: inherit;
}

.btn-new-grid {
  grid-column: 1 / 4;
  border: 1px solid var(--black);
  border: none;
  font-size: 2.2rem;
  font-family: monospace;
  background: inherit;
  color: inherit;
  padding: 0.4em;
  cursor: pointer;
  background: var(--white);
  transition: ease-out 0.2s;
}

.btn-new-grid:hover {
  background: var(--brown);
}

.close {
  position: absolute;
  cursor: pointer;
  width: 1.5em;
  height: 1.5em;
  top: 0.5em;
  right: 0.5em;
  background: var(--brown);
  border-radius: 100%;
}

.close:before,
.close:after {
  position: absolute;
  top: 24%;
  left: 48%;
  content: " ";
  height: 25px;
  width: 3px;
  background-color: var(--orange);
}
.close:before {
  transform: rotate(45deg);
}
.close:after {
  transform: rotate(-45deg);
}

.close:hover {
  background: var(--orange);
}

.close:hover::before,
.close:hover::after {
  background-color: var(--white);
}

.container {
  display: grid;
  border: 15px solid var(--brown);
  width: 22em;
  height: 22em;
  border-radius: 1%;
  align-items: center;
  justify-content: center;
}

@media (min-width: 28em) {
  .container {
    font-size: 1.2rem;
  }
}

@media (min-width: 38em) {
  .container {
    font-size: 1.6rem;
  }
}

.box {
  box-shadow: 0 0 0 1px black;
  display: block;
  height: 100%;
  width: 100%;
  cursor: pointer;
}

/*
.box::before {
  content: "";
  display: block;
  padding-top: 100%;
}
*/

